--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,14 @@
     <script src="./js/index.js" type="module"></script>
   </head>
   <body>
-    <div class="container">
-      <select id="single" class="breed-select unvisible"></select>
-      <p class="loader unvisible"></p>
-      <p class="error unvisible">
-        Oops! Something went wrong! Try reloading the page!
-      </p>
-      <div class="cat-info">
-        <div class="cat-info-pict"></div>
-        <div class="cat-info-desc"></div>
-      </div>
-    </div>
+    <form class="search-form" id="search-form">
+      <input
+        type="text"
+        name="searchQuery"
+        autocomplete="off"
+        placeholder="Search images..."
+      />
+      <button type="submit">Search</button>
+    </form>
   </body>
 </html>
