--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,10 @@
             autocomplete="off"
             placeholder="Search images..."
           />
-          <button type="submit">Search</button>
+          <button class="button-search" type="submit">Search</button>
         </form>
       </div>
     </header>
+    <main></main>
   </body>
 </html>
