--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,8 @@
         </form>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div class="gallery"></div>
+    </main>
   </body>
 </html>
