Add "wrapper "div

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,10 @@
       </div>
     </header>
     <main>
-      <div class="gallery"></div>
+      <div class="wrapper">
+        <div class="gallery"></div>
+        <button type="button" class="load-more unvisible">Load more</button>
+      </div>
     </main>
   </body>
 </html>
