--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 11</title>
+    <title>Homework 11 - API Pixabay</title>
     <link rel="stylesheet" href="./css/styles.css" />
     <script src="./js/index.js" type="module"></script>
   </head>
