--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 11 - API Pixabay</title>
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="icon" type="images/x-icon" href="./favicon.ico" />
+    <link rel="icon" type="images/x-icon" href="./images/favicon.ico" />
     <script src="./js/index.js" type="module"></script>
   </head>
   <body>
